# stm32f4-usbhid

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  STM32F4-UsbHid.code-workspace  UsbDescriptors.cpp  main.cpp
